bin_PROGRAMS = elgyach

elgyach_SOURCES = \
	gconfig.c gconfig.h \
	main.c main.h \
	md5.c md5.h \
	output.c output.h \
	socket.c socket.h \
	text.c text.h \
	usage.c usage.h \
	yahoo_crypt.c  \
	yahoo.c yahoo.h \
	yahoochat.c yahoochat.h \
	find.c find.h \
	utils.c utils.h \
	config_api.c config_api.h \
	error.c error.h \
	input.c input.h \
	display.c display.h \
	sha.c sha.h
